@@ -268,8 +268,8 @@ public class SemiAnalyticalUnscentedKalmanModel implements KalmanEstimation, Uns
 
         // Sort the measurement
         observedMeasurements.sort(new ChronologicalComparator());
-        final AbsoluteDate tStart             = observedMeasurements.get(0).getDate();
-        final AbsoluteDate tEnd               = observedMeasurements.get(observedMeasurements.size() - 1).getDate();
+        final AbsoluteDate tStart             = observedMeasurements.getFirst().getDate();
+        final AbsoluteDate tEnd               = observedMeasurements.getLast().getDate();
         final double       overshootTimeRange = FastMath.nextAfter(tEnd.durationFrom(tStart),
                                                 Double.POSITIVE_INFINITY);
 
