@@ -207,7 +207,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("JPL", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("MARS SPIRIT", segment.getMetadata().getObjectName());
@@ -326,7 +326,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("GSFC", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("TRMM",       segment.getMetadata().getObjectName());
@@ -403,7 +403,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("GSFC", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("TRMM",       segment.getMetadata().getObjectName());
@@ -469,7 +469,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("GSFC", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("TRMM",       segment.getMetadata().getObjectName());
@@ -541,7 +541,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("GSFC", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("TRMM",       segment.getMetadata().getObjectName());
@@ -613,10 +613,10 @@ public class APMParserTest {
         Assertions.assertEquals("GSFC", file.getHeader().getOriginator());
         Assertions.assertEquals("A000001", file.getHeader().getMessageId());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
-        Assertions.assertEquals("SPINNING",   segment.getMetadata().getComments().get(0));
+        Assertions.assertEquals("SPINNING",   segment.getMetadata().getComments().getFirst());
         Assertions.assertEquals("MMS1",       segment.getMetadata().getObjectName());
         Assertions.assertEquals("2015-011A",  segment.getMetadata().getObjectID());
         Assertions.assertEquals(2015,         segment.getMetadata().getLaunchYear());
@@ -674,10 +674,10 @@ public class APMParserTest {
         Assertions.assertEquals("GSFC",    file.getHeader().getOriginator());
         Assertions.assertEquals("A000002", file.getHeader().getMessageId());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
-        Assertions.assertEquals("Rotation From Nadir", segment.getMetadata().getComments().get(0));
+        Assertions.assertEquals("Rotation From Nadir", segment.getMetadata().getComments().getFirst());
         Assertions.assertEquals("LRO",        segment.getMetadata().getObjectName());
         Assertions.assertEquals("2009-031A",  segment.getMetadata().getObjectID());
         Assertions.assertEquals(2009,         segment.getMetadata().getLaunchYear());
@@ -740,9 +740,9 @@ public class APMParserTest {
         Assertions.assertEquals("GSFC", file.getHeader().getOriginator());
         Assertions.assertEquals("A000003", file.getHeader().getMessageId());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
-        Assertions.assertEquals("SPINNING",   segment.getMetadata().getComments().get(0));
+        Assertions.assertEquals("SPINNING",   segment.getMetadata().getComments().getFirst());
         Assertions.assertEquals("MMS1",       segment.getMetadata().getObjectName());
         Assertions.assertEquals("2015-011A",  segment.getMetadata().getObjectID());
         Assertions.assertEquals(2015,         segment.getMetadata().getLaunchYear());
@@ -829,7 +829,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("CS GROUP", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("DUMMY",      segment.getMetadata().getObjectName());
@@ -894,7 +894,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("CS GROUP", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("DUMMY",      segment.getMetadata().getObjectName());
@@ -959,7 +959,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("CS GROUP", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("DUMMY",      segment.getMetadata().getObjectName());
@@ -1023,7 +1023,7 @@ public class APMParserTest {
                             file.getHeader().getCreationDate());
         Assertions.assertEquals("CS GROUP", file.getHeader().getOriginator());
 
-        Segment<AdmMetadata, ApmData> segment = file.getSegments().get(0);
+        Segment<AdmMetadata, ApmData> segment = file.getSegments().getFirst();
 
         // Check Metadata Block
         Assertions.assertEquals("DUMMY",      segment.getMetadata().getObjectName());
