@@ -28,6 +28,7 @@ import org.orekit.attitudes.FrameAlignedProvider;
 import org.orekit.bodies.OneAxisEllipsoid;
 import org.orekit.data.DataContext;
 import org.orekit.data.DataSource;
+import org.orekit.files.ccsds.definitions.CcsdsFrameMapper;
 import org.orekit.files.ccsds.definitions.FrameFacade;
 import org.orekit.files.ccsds.definitions.TimeSystem;
 import org.orekit.files.ccsds.ndm.ParserBuilder;
@@ -80,15 +81,17 @@ public class StreamingOcmWriterTest {
         final Oem original = oemParser.parse(source);
         final OemSatelliteEphemeris originalEphem =
                 original.getSatellites().values().iterator().next();
-        final Frame frame = originalEphem.getSegments().get(0).getInertialFrame();
+        final Frame frame = originalEphem.getSegments().getFirst().getInertialFrame();
         final BoundedPropagator propagator = originalEphem.getPropagator(new FrameAlignedProvider(frame));
         StringBuilder buffer = new StringBuilder();
         OdmHeader header = original.getHeader();
-        OcmMetadata metadata = new OcmMetadata(DataContext.getDefault());
+        CcsdsFrameMapper frameMapper = null;
+        OcmMetadata metadata = new OcmMetadata(DataContext.getDefault(), frameMapper);
         metadata.setTimeSystem(TimeSystem.UTC);
-        metadata.setEpochT0(original.getSegments().get(0).getStart());
+        metadata.setEpochT0(original.getSegments().getFirst().getStart());
         TrajectoryStateHistoryMetadata trajectoryMetadata = new TrajectoryStateHistoryMetadata(metadata.getEpochT0(),
-                                                                                               DataContext.getDefault());
+                                                                                               DataContext.getDefault(),
+                frameMapper);
         trajectoryMetadata.setTrajReferenceFrame(FrameFacade.map(FramesFactory.getITRF(IERSConventions.IERS_2010, true)));
         trajectoryMetadata.setInterpolationMethod(InterpolationMethod.LAGRANGE);
         trajectoryMetadata.setInterpolationDegree(2);
@@ -126,15 +129,17 @@ public class StreamingOcmWriterTest {
         final Oem original = oemParser.parse(source);
         final OemSatelliteEphemeris originalEphem =
                 original.getSatellites().values().iterator().next();
-        final Frame frame = originalEphem.getSegments().get(0).getInertialFrame();
+        final Frame frame = originalEphem.getSegments().getFirst().getInertialFrame();
         final BoundedPropagator propagator = originalEphem.getPropagator(new FrameAlignedProvider(frame));
         StringBuilder buffer = new StringBuilder();
         OdmHeader header = original.getHeader();
-        OcmMetadata metadata = new OcmMetadata(DataContext.getDefault());
+        CcsdsFrameMapper frameMapper = null;
+        OcmMetadata metadata = new OcmMetadata(DataContext.getDefault(), frameMapper);
         metadata.setTimeSystem(TimeSystem.UTC);
-        metadata.setEpochT0(original.getSegments().get(0).getStart());
+        metadata.setEpochT0(original.getSegments().getFirst().getStart());
         TrajectoryStateHistoryMetadata trajectoryMetadata = new TrajectoryStateHistoryMetadata(metadata.getEpochT0(),
-                                                                                               DataContext.getDefault());
+                                                                                               DataContext.getDefault(),
+                frameMapper);
         trajectoryMetadata.setTrajReferenceFrame(FrameFacade.map(FramesFactory.getITRF(IERSConventions.IERS_2010, true)));
         trajectoryMetadata.setInterpolationMethod(InterpolationMethod.LAGRANGE);
         trajectoryMetadata.setInterpolationDegree(2);
@@ -216,11 +221,11 @@ public class StreamingOcmWriterTest {
 
     void partialCompareOcms(Ocm file1, Ocm file2) {
         Assertions.assertEquals(file1.getHeader().getOriginator(), file2.getHeader().getOriginator());
-        Assertions.assertEquals(file1.getSegments().get(0).getData().getTrajectoryBlocks().size(),
-                                file2.getSegments().get(0).getData().getTrajectoryBlocks().size());
-        for (int i = 0; i < file1.getSegments().get(0).getData().getTrajectoryBlocks().size(); i++) {
-            partialCompareOcmEphemerisBlocks(file1.getSegments().get(0).getData().getTrajectoryBlocks().get(i),
-                                             file2.getSegments().get(0).getData().getTrajectoryBlocks().get(i));
+        Assertions.assertEquals(file1.getSegments().getFirst().getData().getTrajectoryBlocks().size(),
+                                file2.getSegments().getFirst().getData().getTrajectoryBlocks().size());
+        for (int i = 0; i < file1.getSegments().getFirst().getData().getTrajectoryBlocks().size(); i++) {
+            partialCompareOcmEphemerisBlocks(file1.getSegments().getFirst().getData().getTrajectoryBlocks().get(i),
+                                             file2.getSegments().getFirst().getData().getTrajectoryBlocks().get(i));
         }
     }
 
