@@ -33,7 +33,7 @@ public class FixedStepSelectorTest {
         final AbsoluteDate t1 = t0.shiftedBy(91);
         final List<AbsoluteDate> list = selector.selectDates(t0, t1);
         Assertions.assertEquals(10, list.size());
-        Assertions.assertEquals( 27.0, list.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 27.0, list.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 37.0, list.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 47.0, list.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 57.0, list.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -53,7 +53,7 @@ public class FixedStepSelectorTest {
         final AbsoluteDate t1 = t0.shiftedBy(17);
         final List<AbsoluteDate> list = selector.selectDates(t0, t1);
         Assertions.assertEquals(3, list.size());
-        Assertions.assertEquals( 30.0, list.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 30.0, list.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 35.0, list.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 40.0, list.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
     }
@@ -66,7 +66,7 @@ public class FixedStepSelectorTest {
         final AbsoluteDate t1 = t0.shiftedBy(17);
         final List<AbsoluteDate> list = selector.selectDates(t1, t0);
         Assertions.assertEquals(3, list.size());
-        Assertions.assertEquals( 40.0, list.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 40.0, list.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 35.0, list.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 30.0, list.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
     }
@@ -82,7 +82,7 @@ public class FixedStepSelectorTest {
         Assertions.assertEquals(0, list1.size());
         final List<AbsoluteDate> list2 = selector.selectDates(t1, t2);
         Assertions.assertEquals(9, list2.size());
-        Assertions.assertEquals( 30.0, list2.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals( 30.0, list2.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 40.0, list2.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 50.0, list2.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 60.0, list2.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -102,7 +102,7 @@ public class FixedStepSelectorTest {
         final AbsoluteDate t2 = t1.shiftedBy(89);
         final List<AbsoluteDate> list1 = selector.selectDates(t2, t1);
         Assertions.assertEquals(9, list1.size());
-        Assertions.assertEquals(110.0, list1.get(0).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
+        Assertions.assertEquals(110.0, list1.getFirst().getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals(100.0, list1.get(1).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 90.0, list1.get(2).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
         Assertions.assertEquals( 80.0, list1.get(3).getComponents(utc).getTime().getSecondsInLocalDay(), 1.0e-15);
@@ -126,7 +126,7 @@ public class FixedStepSelectorTest {
         Assertions.assertEquals(10, list1.size());
         final List<AbsoluteDate> list2 = selector.selectDates(t1, t2);
         Assertions.assertEquals(3, list2.size());
-        Assertions.assertEquals(10.0, list2.get(0).durationFrom(list1.get(list1.size() - 1)), 1.0e-15);
+        Assertions.assertEquals(10.0, list2.getFirst().durationFrom(list1.getLast()), 1.0e-15);
     }
 
     @Test
@@ -141,7 +141,7 @@ public class FixedStepSelectorTest {
         Assertions.assertEquals(10, list1.size());
         final List<AbsoluteDate> list2 = selector.selectDates(t2, t3);
         Assertions.assertEquals(2, list2.size());
-        Assertions.assertEquals( 0.0, list2.get(0).durationFrom(t2), 1.0e-15);
+        Assertions.assertEquals( 0.0, list2.getFirst().durationFrom(t2), 1.0e-15);
         Assertions.assertEquals(10.0, list2.get(1).durationFrom(t2), 1.0e-15);
     }
 
